--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -125,3 +125,4 @@ p1 <- ggplot(df.plot, aes(x=interval, y = steps)) +
         panel.grid.major = element_line(colour = "grey45"))
 p1
 ```
+From the above, it does appear as though there are differences between weekday and weekend steps taken. The weekdays have a larger peak early in the day than do the weekend days and the weekend days have a peak late in the day (after 2000) that does not appear during the weekdays.
